Create api documentation for delete product
