# storage/api-docs/api-docs.json
@@ -235,6 +235,36 @@
                         "description": "Error."
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "products"
+                ],
+                "summary": "Delete a product",
+                "description": "Remove the specified resource from storage.",
+                "operationId": "1a0a353d0842ff4f9347bb66ec53e3ea",
+                "parameters": [
+                    {
+                        "name": "product",
+                        "in": "path",
+                        "description": "Product ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Product delete successfully."
+                    },
+                    "404": {
+                        "description": "Product not found."
+                    },
+                    "400": {
+                        "description": "Error."
+                    }
+                }
             }
         }
     }
